<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ground"
    tools:context=".BantuanActivity">

    <RelativeLayout
        android:id="@id/text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/petunjuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:shadowColor="@color/colorPrimary"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text="@string/petunjuk_konsultasi"
                android:textAlignment="center"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                app:fontFamily="serif" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/petunjuk">

            <TextView
                android:id="@+id/konsul"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/konsultasi1"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                app:fontFamily="serif"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="152dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_below="@id/konsul"
                app:srcCompat="@drawable/ss" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/imageView"
                android:text="@string/konsultasi"
                android:textColor="@color/colorBlack"
                app:fontFamily="serif"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:layout_below="@id/text"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/konsultasi" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/r1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:shadowColor="@color/colorPrimary"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text="Petunjuk Lihat Data"
                android:textAlignment="center"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                app:fontFamily="serif" />
        </LinearLayout>

            <TextView
                android:id="@+id/dt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/data"
                android:layout_below="@id/data"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                app:fontFamily="serif"/>

        <LinearLayout
            android:id="@+id/ttg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dt">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:shadowColor="@color/colorPrimary"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text="Petunjuk Menu Tentang"
                android:textAlignment="center"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                app:fontFamily="serif" />
        </LinearLayout>

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tentang"
                android:layout_below="@id/ttg"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                app:fontFamily="serif"/>

        <LinearLayout
            android:id="@+id/tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:shadowColor="@color/colorPrimary"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text="Petunjuk Tips Perawatan"
                android:textAlignment="center"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                app:fontFamily="serif" />
        </LinearLayout>

            <TextView
                android:id="@+id/prwt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tips"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:layout_below="@id/tips"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                app:fontFamily="serif"/>


    </RelativeLayout>


</ScrollView>